# glint-demo-iplug2

./: .gitmodules  README.md
GP/: .gitignore  CMakeLists.txt  GP.RPP  GP.cpp  GP.h  GP.sln  GPGlintDocument.hpp  GPGlintEditor.hpp  GPGlintEditorMac.mm  GPGlintTopLevelHost.hpp  GPMacEditorHost.hpp  GPMacEditorHost.mm  README.md  config.h
GP/Backups/: GP-2026-05-02_142810.rpp-bak  GP-2026-05-03_135609.rpp-bak
GP/GP.xcworkspace/: contents.xcworkspacedata
GP/config/: GP-ios.xcconfig  GP-mac.xcconfig  GP-web.mk  GP-win.props  glint_bundle_deep.props  glint_bundle_shallow.props
GP/projects/: GP-aax.vcxproj  GP-aax.vcxproj.filters  GP-app.vcxproj  GP-app.vcxproj.filters  GP-clap.vcxproj  GP-clap.vcxproj.filters  GP-vst2.vcxproj  GP-vst2.vcxproj.filters  GP-vst3.vcxproj  GP-vst3.vcxproj.filters  GP-wam-controller.mk  GP-wam-processor.mk
GP/projects/GP-iOS.xcodeproj/: project.pbxproj
GP/projects/GP-iOS.xcodeproj/xcshareddata/xcschemes/: iOS-APP with AUv3.xcscheme  iOS-AUv3.xcscheme  iOS-AUv3Framework.xcscheme
GP/projects/GP-macOS.xcodeproj/: project.pbxproj
GP/projects/GP-macOS.xcodeproj/xcshareddata/xcschemes/: All macOS.xcscheme  macOS-AAX.xcscheme  macOS-APP with AUv3.xcscheme  macOS-APP.xcscheme  macOS-AUv2.xcscheme  macOS-AUv3.xcscheme  macOS-AUv3Framework.xcscheme  macOS-CLAP.xcscheme  macOS-VST2.xcscheme  macOS-VST3.xcscheme
GP/resources/: AUv3Framework.h  GlintPlug-AAX-Info.plist  GlintPlug-AU-Info.plist  GlintPlug-CLAP-Info.plist  GlintPlug-Pages.xml  GlintPlug-VST2-Info.plist  GlintPlug-VST3-Info.plist  GlintPlug-iOS-AUv3-Info.plist  GlintPlug-iOS-Info.plist  GlintPlug-iOS-LaunchScreen.storyboard  GlintPlug-iOS-MainInterface.storyboard  GlintPlug-macOS-AUv3-Info.plist  GlintPlug-macOS-AUv3Framework-Info.plist  GlintPlug-macOS-Info.plist  GlintPlug-macOS-MainMenu.xib  GlintPlug.icns  IPlugAUViewController_vGP.xib  main.rc  main.rc_mac_dlg
GP/scripts/: makedist-web.sh  prebuild-win.bat  prepare_resources-ios.py  prepare_resources-mac.py  prepare_resources-win.py
glint_user_code/cpp/ui/: about_modal.hpp  bypass_led_btn.hpp  glint_spacer.hpp  glint_switch.hpp  gp_platform_utils.hpp  knob.hpp  knobControl.hpp  vc_hamburger.hpp  vuMeter.hpp
glint_user_code/web/styles/: about_modal.css  knob.css  license_form.css  main.css  main_ui.css
scripts/: bump_build_number.mjs  download_vst3_sdk.ps1  download_vst3_sdk.sh  test_gp_windows_launch_entries.mjs
